# qacpi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gen_osi.py  iasl_helper.py  lib.cmake  osi.dsl  printers.py
.github/workflows/: main.yml
include/qacpi/: array.hpp  context.hpp  event.hpp  handlers.hpp  ns.hpp  object.hpp  op_region.hpp  os.hpp  resources.hpp  shared_ptr.hpp  small_vec.hpp  status.hpp  string.hpp  sync.hpp  tables.hpp  utility.hpp  utils.hpp  variant.hpp
src/: aml_ops.hpp  buffer.cpp  context.cpp  event.cpp  handlers.cpp  internal.hpp  interpreter.cpp  interpreter.hpp  logger.cpp  logger.hpp  main.cpp  ns.cpp  op_region.cpp  ops.cpp  ops.hpp  resources.cpp  string.cpp  sync.cpp  utils.cpp
tests/: run_tests.py
tests/runner/: CMakeLists.txt  helpers.cpp  helpers.h  interface_impl.cpp  test.dsl  test_runner.cpp
tests/test-cases/: infinite-recursion.asl  op-region-field.asl
